# fping

./: .gitignore  .travis.yml  Makefile.am  README.md  autoclean.sh  ci  configure.ac
ci/: prepare-linux.sh
contrib/: fping.spec.in
src/: fping.c  fping.h  options.h  seqmap.c  seqmap.h  socket.c  socket4.c  socket4.inc  socket6.c  socket6.inc
t/: 01-basics  02-help  03-forbidden  04-options-a-b  05-options-c-e  06-options-f-h  07-options-i-m  08-options-n-q  09-option-r-t  10-option-u-v  11-nopriv  12-option-type  13-unknown-host  14-ping-internet-hosts  Command.pm  common.pm  issue-56  issue-58
